--- a/notebook/train.ipynb
+++ b/notebook/train.ipynb
@@ -865,7 +865,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3920",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
@@ -879,7 +879,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.20"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
